stripe attempt integration

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,6 +28,9 @@
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
 
+    --brand: 22, 21%, 46%;
+    --brand-accent: 27, 53%, 48%;
+
     --border: 214.3 31.8% 91.4%;
     --input: 214.3 31.8% 91.4%;
 
