--- a/styles/shared.css
+++ b/styles/shared.css
@@ -25,10 +25,24 @@ body {
   align-items: center;
   justify-content: center;
 }
-
-/* .anim {
+/*
+.anim {
   overflow: hidden;
 } */
+
+.nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: calc(100% - 9px);
+  background: rgba(255, 255, 255, 0.1) !important;
+  backdrop-filter: blur(6px);
+  z-index: 900;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transform: translateX(5px);
+}
 
 .row {
   display: flex;
@@ -117,10 +131,10 @@ body {
 .theme-gradient {
   background: linear-gradient(
     to right,
-    #b6b6c2 0%,
+    #ba7339 0%,
     28.270676732063293%,
-    #714b5a 56.54135346412659%,
+    #8f6d5d 56.54135346412659%,
     78.2706767320633%,
-    #53515c 100%
+    #ba7339 100%
   );
 }
