--- a/components/template/hero/Hero.css
+++ b/components/template/hero/Hero.css
@@ -6,7 +6,7 @@
   position: relative;
   overflow: hidden;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   padding: 5vw 0;
   border: 4px solid white;
 }
